--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,15 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Vollkorn|Open+Sans|Roboto');
+
 body {
     background-color: #FFF9E1;
     padding: 0;
 	margin: 0;
-	font-family: Helvetica,Arial,sans-serif;
+	font-family: 'Vollkorn';
 	font-size: 20px
 	color: #000000;
 	line-height: 1.3;
 }
 
-h1, p {
+h1 {
     color: #000000;
+    font-family: 'Roboto';
+}
+
+p {
+    color: #000000;
+    font-family: 'Roboto';
 }
 
 ul {
@@ -19,7 +27,7 @@ ul {
 
 h2 {
 	font-style: italic;
-	
+	font-family: 'Roboto';	
 }
 
 header {
