--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -175,7 +175,7 @@ main {
 
 #collage {
 	padding: 2em 0;
-    background-color: #FFE2B8;
+    background-color: #FFB7CF;
     border: 1px black solid;
     padding: 20px;
     display: inline-block;
@@ -237,4 +237,26 @@ main {
 	width: 70%;
 	display: inline-block;
 	float: left;
+}
+
+#two_column {
+    background-color: #FFB7CF;
+    border: 1px black solid;
+    padding: 20px;
+}
+
+.left {
+    background-color: #E582A2;
+    border: 1px black solid;
+    padding: 20px;
+    float: left;
+    width: 30%;
+}
+
+.right {
+    background-color: #E55B88;
+    border: 1px black solid;
+    padding: 20px;
+    float: right;   
+    width: 62%;
 }
