--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -6,6 +6,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
+* { margin:0; padding:0; box-sizing:border-box; }
+
 body {
     background-color: #FCFBF4;
     padding: 0;
@@ -54,7 +56,6 @@ h4 {
 	font-weight: 50px;
 	font-size: 1.15em;
 	letter-spacing: 1px;
-	text-align:center;
 	color:#000;
 	text-transform:uppercase;
 }
@@ -151,16 +152,20 @@ main {
 #bread {
 	width: 200px;
 	margin: 1em;
+	padding-left: 50px;
 }
 
 #toast {
-	width: 300px;
+	width: 374px;
 	margin: 1em;
+	padding-top: 48px;
 }
 
 #sarah {
-	width: 400px;
+	width: 425px;
 	margin: 1em;
+	padding-left: 150px;
+	padding-bottom: 25px;
 }
 
 #baking {
@@ -224,12 +229,24 @@ main {
     height: 0;
 }
 
-.col-1 {
+.col-0 {
 	font-size: 1em;
-	width: 40%;
+	width: 30%;
 	padding: 5%;
 	display: inline-block;
 	float: left;
+	text-align: center;
+	padding-left: 175px
+}
+
+
+.col-1 {
+	font-size: 1em;
+	width: 36%;
+	display: inline-block;
+	float: left;
+	text-align: left;
+	
 }
 
 .col-2 {
@@ -237,6 +254,16 @@ main {
 	width: 70%;
 	display: inline-block;
 	float: left;
+	text-align: left;
+
+}
+
+.col-3 {
+	font-size: 1em;
+	width: 30%;
+	display: inline-block;
+	float: left;
+	text-align: left;
 }
 
 #two_column {
@@ -259,4 +286,12 @@ main {
     padding: 20px;
     float: right;   
     width: 62%;
+}
+
+.fourboxes {
+    background-color: #E582A2;
+    border: 1px black solid;
+    padding: 20px;
+    float: left;
+    width: 45%;
 }
